--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+      # Reverted to npm ci for faster, more reliable builds
       - name: Install dependencies
         run: npm ci
       - name: Build
