--- a/.github/workflows/fetch-feeds.yml
+++ b/.github/workflows/fetch-feeds.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+      # Reverted to npm ci for faster, more reliable builds
       - name: Install dependencies
         run: npm ci
       - name: Create Firebase Service Account Key
