--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: '20'
       # Reverted to npm ci for faster, more reliable builds
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Build
         run: npm run build
         env:
