--- a/.github/workflows/fetch-feeds.yml
+++ b/.github/workflows/fetch-feeds.yml
@@ -13,9 +13,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-      # Reverted to npm ci for faster, more reliable builds
+      # FIX: Use 'npm install' to resolve dependency mismatches in CI
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Create Firebase Service Account Key
         env:
           FIREBASE_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
