--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     ]
   },
   "devDependencies": {
+    "axios": "^1.7.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.4.5",
     "firebase-admin": "^11.11.1",
-    "rss-parser": "^3.13.0",
-    "dotenv": "^16.4.5"
+    "rss-parser": "^3.13.0"
   }
 }
