--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
     "firebase": "^9.23.0",
+    "html-react-parser": "^5.2.5",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
