--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "news-aggregator",
-  "homepage": "https://lasikiewicz.github.io/news-aggregator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.11.3",
     "@tailwindcss/typography": "^0.5.13",
-    "autoprefixer": "^10.4.19",
+    "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
     "firebase": "^9.23.0",
-    "html-react-parser": "^5.2.5",
-    "postcss": "^8.4.38",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.25.1",
+    "firebase-admin": "^12.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.1"
+    "rss-parser": "^3.13.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,11 +41,6 @@
     ]
   },
   "devDependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "axios": "^1.7.2",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.4.5",
-    "firebase-admin": "^11.11.1",
-    "rss-parser": "^3.13.0"
+    "tailwindcss": "^3.4.3"
   }
 }
