--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "news-aggregator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lasikiewicz.github.io/news-aggregator",
   "dependencies": {
     "@google/generative-ai": "^0.11.3",
     "@tailwindcss/typography": "^0.5.13",
