--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,21 +17,12 @@ jobs:
         with:
           node-version: '20'
 
-      # New debugging step to verify secrets
-      - name: Verify Secrets
-        run: |
-          if [ -z "${{ secrets.REACT_APP_FIREBASE_API_KEY }}" ]; then
-            echo "::error::REACT_APP_FIREBASE_API_KEY secret is not set or is empty."
-            exit 1
-          else
-            echo "REACT_APP_FIREBASE_API_KEY secret is found."
-          fi
-
       - name: Create .env file
         run: |
           echo "REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }}" >> .env
           echo "REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}" >> .env
-          echo "REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBAsE_PROJECT_ID }}" >> .env
+          # FIX: Corrected a typo in the secret name below (FIREBASE was FIREBAsE)
+          echo "REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}" >> .env
           echo "REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}" >> .env
           echo "REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}" >> .env
           echo "REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}" >> .env
